<resources>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>

    <string name="dialog_btn_pos">Yes</string>
    <string name="dialog_btn_neg">No</string>

    <string name="app_name">Movies Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movies Hub</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_comment">Comment</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_cinemas">Cinemas</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_setting">Setting</string>

    <string name="home_second">Home Second</string>

    <string name="login_logo">Logo</string>
    <string name="hint_username">Username</string>
    <string name="hint_pwd">Password</string>
    <string name="action_bar_title_login">Sign in</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_bio_login">Biometric Login</string>

    <string name="error_empty_field">Please fill this field</string>

    <string name="title_search_info">Search of "%1$s"</string>
    <string name="title_search_count">%1$s result of "%2$s"</string>

    <string name="toast_data_fetched">Data Fetched</string>
    <string name="toast_json_err">Error to get JSON</string>

    <string name="msg_load_more_data">Load More</string>
    <string name="end_of_search_msg">No more results</string>

    <string name="alert_add_fav">Add To Favorite?</string>

    <string name="toast_add_fav_success">Movie is added to Favorite</string>
    <string name="toast_add_fav_failure">Movie is already added to Favorite</string>

    <string name="title_review">Comment - %1$s</string>

    <string name="dialog_title_post_review">Post Review</string>
    <string name="dialog_msg_post_review">Confirm to submit?</string>
    <string name="toast_comment_success">Comment is submitted</string>
    <string name="toast_comment_failure">Fail to submit</string>

    <string name="toast_no_movie_cmt">No Movie Comment</string>
    <string name="toast_no_movie_fav">No Favorite Movie</string>
    <string name="toast_no_movie_recent">No Recent Movie</string>

    <string name="hint_text_review">Leave Your Comment</string>
    <string name="btn_submit">Submit</string>

    <string name="dialog_title_remove_item">Remove "%1$s"?</string>

    <string name="error_mismatch_field">Fields are not matched</string>

    <string-array name="regions">
        <item>Hong Kong</item>
        <item>Kowloon</item>
        <item>New Territories</item>
    </string-array>

    <string-array name="circuits">
        <item>Emperor Cinemas</item>
        <item>MCL</item>
        <item>UA</item>
        <item>Broadway &amp; AMC</item>
        <item>Golden Harvest</item>
        <item>Cinema City</item>
        <item>Newport</item>
        <item>Others</item>
    </string-array>

    <string-array name="setting">
        <item>Change Password</item>
        <item>Logout</item>
    </string-array>

    <string-array name="app_lang">
        <item>English</item>
        <item>Chinese</item>
    </string-array>

    <string name="user_pref">user_pref</string>
    <string name="logged_in">logged_in</string>
    <string name="identity">identity</string>

    <string name="register_success">Register Successful</string>
    <string name="register_failure_username">Try another username</string>

    <string name="btn_authenticate">Login</string>
    <string name="toast_logout">Logged out</string>

    <string name="hint_enter_pwd">Enter New Password</string>
    <string name="hint_re_enter_pwd">Enter New Password Again</string>

    <string name="dialog_title_change_pwd">Change Password</string>

    <string name="toast_new_pwd_re_login">Password changed, Please login again</string>

    <string name="dialog_title_logout_title">Confirm to Logout as "%1$s"?</string>

    <string name="biometric_title">Login</string>
    <string name="biometric_subtitle">Login to your Movie Hub account</string>
    <string name="biometric_description">Place finger on the home button to verify identity</string>
    <string name="biometric_negative_button_text">CANCEL</string>

    <string name="biometric_failed">Fingerprint not recognized</string>
    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_failure">Login not successful</string>
    <string name="biometric_cancelled">Authentication cancelled by user</string>
    <string name="biometric_success">Login Successful, Welcome back, %1$s</string>

    <!-- String resource of Movie Details XML-->
    <string name="btn_imdb">Show imdB</string>
    <string name="btn_fav">Favorite</string>
    <string name="txt_view_genre">Genre</string>
    <string name="txt_view_plot">Plot</string>
    <string name="txt_view_production">Production</string>
    <string name="txt_view_director">Director</string>
    <string name="txt_view_actor">Actor</string>
    <string name="btn_comment">Comment</string>

    <!-- String resource of View -->
    <string name="txt_view_circuit_name">Circuit Name</string>
    <string name="txt_view_circuit_address">Circuit Address</string>
    <string name="txt_view_circuit_tel">Circuit Telephone</string>
    <string name="btn_open_map">How to go</string>
</resources>
