<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_cinemas"
            android:icon="@drawable/baseline_movie_24"
            android:title="@string/menu_cinemas" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_white_24"
            android:title="@string/menu_setting" />
    </group>
</menu>
