<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.CircuitsDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/txt_view_circuit_name"
            android:textColor="@color/colorAccent"
            android:textSize="12pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_vertical_margin" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/txt_view_circuit_address"
            android:textColor="@color/colorAccent"
            android:textSize="12pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/txt_view_circuit_tel"
            android:textColor="@color/colorAccent"
            android:textSize="12pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_show_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btn_open_map" />

</LinearLayout>